versioned_docs/version-2.16.1/community-hub/media.md
---
description: "Press coverage, reviews, and media articles about Zaparoo: a collection of mentions and features from around the web."
keywords: [zaparoo press, zaparoo coverage, zaparoo reviews, zaparoo media articles]
---

# Media

Coverage of the Zaparoo project online.

## Press & Articles

### Major Tech Publications

- **[How to modernize your retro game collection in a few convoluted steps](https://www.theverge.com/24072166/retro-classic-game-roms-nfc-mister-how-to-modern)** - *The Verge* (February 29, 2024)
  Comprehensive feature article on TapTo/NFC system for MiSTer FPGA

- **[Exploring TapTo NFC Integration On The MiSTer](https://hackaday.com/2024/09/15/exploring-tapto-nfc-inegration-on-the-mister)** - *Hackaday* (September 15, 2024)
  Technical deep-dive into TapTo NFC cards and integration

- **[TapTo NFC Loading System - Gives MiSTer FPGA A Vital Physical Connection](https://www.timeextension.com/reviews/tapto-nfc-loading-system-gives-mister-fpga-a-vital-physical-connection)** - *Time Extension* (July 14, 2024)
  Full review of the TapTo NFC loading system

- **[This Amiibo-Like NFC System Is A Cute Way To Load Up Games On Your MiSTer FPGA](https://www.timeextension.com/news/2024/12/this-amiibo-like-nfc-system-is-a-cute-way-to-load-up-games-on-your-mister-fpga)** - *Time Extension* (December 19, 2024)
  Coverage of Pixel Memories NFC reader design

- **[MiSTer FPGA's Next Trick? Launching Games From CD](https://www.timeextension.com/news/2024/10/mister-fpgas-next-trick-launching-games-from-cd)** - *Time Extension* (October 8, 2024)
  Coverage of CD-based game launching with TapTo

- **[Retro Remake unveils $150 FPGA-based PlayStation clone, with built-in NFC reader](https://www.polygon.com/gaming/512589/superstation-one-pre-order-playstation-console/)** - *Polygon* (January 28, 2025)
  Mainstream tech coverage of the SuperStation ONE with Zaparoo NFC reader built in

- **[SuperStation ONE: $150 FPGA-based PlayStation clone with NFC reader](https://www.cnx-software.com/2025/01/29/superstation-one-150-fpga-based-playstation-clone-with-nfc-reader/)** - *CNX Software* (January 29, 2025)
  Hardware write-up covering the SuperStation ONE and its Zaparoo NFC reader

- **[SuperStation ONE: PlayStation-inspired FPGA retro console](https://www.electronics-lab.com/superstation-one-playstation-inspired-fpga-retro-console/)** - *electronics-lab.com* (February 24, 2025)
  Electronics-focused coverage of the SuperStation ONE with Zaparoo integration

### Retro Gaming News

- **[Using NFC Tags to Run Games on the MiSTer FPGA](https://www.retrorgb.com/using-nfc-tags-to-run-games-on-the-mister-fpga.html)** - *RetroRGB* (September 8, 2023)
  Early coverage of the NFC system

- **[Groovy MiSTer, MiSTerCast, TapTo, MiSTex & More](https://www.retrorgb.com/mister-fpga-news-groovy-mister-mistercast-tapto-mistex-more.html)** - *RetroRGB* (March 3, 2024)
  MiSTer FPGA news roundup including TapTo coverage

- **[TapTo Mobile NFC MiSTer App](https://www.retrorgb.com/tapto-mobile-nfc-mister-app.html)** - *RetroRGB* (April 18, 2024)
  Coverage of mobile app launch

- **[MiSTerFPGA News – Atari Jaguar, TapTo Rename & More](https://www.retrorgb.com/misterfpga-news-atari-jaguar-tapto-rename-more.html)** - *RetroRGB* (November 18, 2024)
  Coverage of TapTo rebranding to Zaparoo

- **[PC88, Play Videos on MiSTer, SNES Save States & More](https://www.retrorgb.com/mister-fpga-news-pc88-play-videos-on-mister-snes-save-states-more.html)** - *RetroRGB* (November 26, 2024)
  Coverage of Zaparoo movie launching feature

- **[MiSTer FPGA News – MultiSystem 2, ZX Spectrum Next, Gridiron Fight & More](https://www.retrorgb.com/mister-fpga-news-multisystem-2-zx-spectrum-next-gridiron-fight-more.html)** - *RetroRGB* (December 6, 2024)
  Coverage of Zaparoo QR codes and the 1001 Games book integration

- **[The DIY MiSTer Handheld](https://www.retrorgb.com/the-diy-mister-handheld.html)** - *RetroRGB* (December 16, 2024)
  Features Zaparoo integration in handheld build

- **[MiSTerFPGA News – Ninja Gaiden, Gradius 2, Atari Jaguar, Sega ST-V & More](https://retrorgb.com/misterfpga-news-ninja-gaiden-gradius-2-atari-jaguar-sega-st-v-more.html)** - *RetroRGB* (January 12, 2025)
  TapTo-to-Zaparoo transition coverage alongside Zaploader NT news

- **[Zaparoo Online, New Arcade Cores, New Mini-ITX IO Board & More](https://www.retrorgb.com/mister-fpga-news-zaparoo-online-new-arcade-cores-new-mini-itx-io-board-more.html)** - *RetroRGB* (February 17, 2025)
  Coverage of Zaparoo Online features

- **[MiSTer Pi Successor, New Arcade Cores, Downloader & More](https://www.retrorgb.com/mister-fpga-news-mister-pi-successor-new-arcade-cores-downloader-more.html)** - *RetroRGB* (March 20, 2025)
  Zaparoo integration coverage

- **[MiSTer FPGA News – 3DO, Taito F2, New Arcade Cores, Zaparoo & More](https://retrorgb.com/mister-fpga-news-mister-fpga-news-3do-taito-f2-new-arcade-cores-zaparoo-more.html)** - *RetroRGB* (April 13, 2025)
  Zaparoo Core v2.2.0 release coverage

- **[Multisystem² has landed](https://gamingretro.co.uk/multisystem-has-landed/)** - *Gaming Retro* (May 19, 2025)
  Hardware review of the Multisystem 2 covering its Zaparoo integration

- **[MiSTer FPGA News – CD-i, Sega ST-V, Sega Saturn & More](https://retrorgb.com/mister-fpga-news-cd-i-sega-st-v-sega-saturn-more.html)** - *RetroRGB* (June 20, 2025)
  Preview of the Zaparoo TUI and related updates

- **[Atari System 2, Quarter MiSter, Multisystem Cart Support & More](https://www.retrorgb.com/mister-fpga-news-atari-system-2-quarter-mister-multisystem-cart-support-more.html)** - *RetroRGB* (July 21, 2025)
  Zaparoo updates including NAS support

- **[Zaparoo Releases Multisystem2 NFC Cards + Kit](https://metalgamesolid.com/misc/zaparoo-releases-multisystem2-nfc-cards-kit)** - *MetalGameSolid* (August 2, 2025)
  Product release coverage

- **[Zaparoo Update: Seamless Integration with tty2oled – Coming Soon!](https://metalgamesolid.com/misc/zaparoo-update-seamless-integration-with-tty2oled-coming-soon/)** - *MetalGameSolid* (August 21, 2025)
  Feature announcement covering tty2oled integration

- **[Zaparoo Will Soon Use Smart Game Matching](https://metalgamesolid.com/misc/zaparoo-will-soon-use-smart-game-matching)** - *MetalGameSolid* (October 19, 2025)
  Technical feature announcement

- **[Zaparoo Adds Support for USB and SD Cards as Launch Tokens](https://metalgamesolid.com/misc/zaparoo-adds-support-for-usb-and-sd-cards-as-launch-tokens)** - *MetalGameSolid* (October 25, 2025)
  New reader driver announcement

- **[RFIDisk: When Floppy Drives Go Contactless](https://hackaday.com/2025/10/16/rfidisk-when-floppy-drives-go-contactless/)** - *Hackaday* (October 16, 2025)
  NFC floppy drive builds, featuring Zaparoo community projects

- **[Amstrad CPW & New Arcade Games, NES Mappers & More](https://retrorgb.com/mister-fpga-news-amstrad-cpw-new-arcade-games-nes-mappers-more.html)** - *RetroRGB* (November 3, 2025)
  MiSTer FPGA news with Zaparoo technical updates

- **[MiSTer NFC Cards Bring Physical Fun to Digital Games](https://theoasisbbs.com/mister-nfc-cards-bring-physical-fun-to-digital-games)** - *The Oasis BBS* (April 8, 2025)
  Article covering Wolfgang's NFC card creation tutorial

- **[Wizzo Teases Zaparoo Graphical Front-End For MiSTerFPGA](https://metalgamesolid.com/fpga/mister-fpga/wizzo-teases-zaparoo-graphical-front-end-for-misterfpga/)** - *MetalGameSolid* (December 2025)
  Early look at the Zaparoo graphical front-end for MiSTer

- **[MiSTer SuperStation One Review](https://retrorgb.com/mister-superstation-one-review.html)** - *RetroRGB* (March 5, 2026)
  Hardware review of the SuperStation ONE featuring the built-in NFC reader used by Zaparoo

- **[MiSTer Companion v2.2.0 Released](https://metalgamesolid.com/misc/mister-companion-v2-2-0-released/)** - *MetalGameSolid* (March 8, 2026)
  Coverage highlighting the built-in Zaparoo install flow in MiSTer Companion v2.2.0

- **[MiSTer FPGA News – Mat Mania, PC Jr, Atari Jaguar & More](https://retrorgb.com/mister-fpga-news-mat-mania-pc-jr-atari-jaguar-more.html)** - *RetroRGB* (March 12, 2026)
  Coverage of Zaparoo game distribution launching with Atari Jaguar titles from Reboot Games

- **[MiSTer FPGA News – Graphical User Interface, Rainbow Islands, MultiSystem 2 Arcade](https://retrorgb.com/mister-fpga-news-graphical-user-interface-rainbow-islands-multisystem-2-arcade.html)** - *RetroRGB* (May 9, 2026)
  Initial coverage of Zaparoo Frontend and its artwork-based game browser

- **[MiSTer FPGA News – New PC Core, Atari Star Wars, Darius 2 & More](https://retrorgb.com/mister-fpga-news-new-pc-core-atari-star-wars-darius-2-more.html)** - *RetroRGB* (June 1, 2026)
  Coverage of the Frontend rename, CRT and list modes, per-system launchers, and related Core updates

- **[Zaparoo Frontend: Upgraded MiSTer GUI](https://retrorgb.com/zaparoo-frontend-upgraded-mister-gui.html)** - *RetroRGB* (June 29, 2026)
  Dedicated look at Zaparoo Frontend v1.2.0, including CRT support and the built-in MiSTer updater

### Developer Articles & Community

- **[Creating TapTo](https://timwilsie.com/creating-tapto)** - *Tim Wilsie* (March 26, 2024)
  Behind-the-scenes on creating TapTo by a developer

- **[Putting TapTo in your pocket](https://timwilsie.com/portfolio/putting-tapto-in-your-pocket)** - *Tim Wilsie*
  Development story of the mobile app

- **[Welcome Zaparoo!](https://timwilsie.com/welcome-zaparoo/)** - *Tim Wilsie* (April 27, 2025)
  Behind-the-scenes on the TapTo-to-Zaparoo rebrand from the designer

- **[The first Zaparoo equipped consoles arrive!](https://timwilsie.com/the-first-zaparoo-equipped-consoles-arrive/)** - *Tim Wilsie* (May 9, 2025)
  First look at SuperStation ONE and Multisystem 2 shipping with Zaparoo

- **[Launching retro games with NFC cards for fun and pleasure](https://forums.bit-tech.net/index.php?threads/launching-retro-games-with-nfc-cards-for-fun-and-pleasure.387972/)** - *Bit-Tech Forums* (September 28, 2025)
  User build log and discussion

## Video Content

### Tutorials & Demos

- **[MiSTer FPGA - Running Games with a Physical Tap (NFC)](https://www.youtube.com/watch?v=YwQviLwWHYM)** - *RetroRGB* (September 8, 2023)
  Early video companion to the RetroRGB NFC tutorial article

- **[MiSTer FPGA - Zaparoo Demo and Tutorial](https://www.youtube.com/watch?v=mMfIT-2wXrc)** - *Gentlemen's Pixel Club* (December 14, 2024)
  Comprehensive demo and tutorial of Zaparoo on MiSTer FPGA

- **[Exploring TapTo on the MiSTer](https://www.youtube.com/watch?v=73Kx3jwyk0U)** - *What's Ken Making* (July 12, 2024)
  In-depth exploration of the TapTo project

- **[Launch Games With Your Phones NFC | TapTo Life | MiSTer FPGA](https://www.youtube.com/watch?v=YzEqLl4ow0Q)** - *Retro Dodo Gaming* (April 18, 2024)
  Tutorial on using phone NFC with TapTo

- **[Launch Games with NFC Cards: Zaparoo + Batocera!](https://www.youtube.com/watch?v=BnnAX9cNUIE)** - *Zaparoo Official* (April 26, 2025)
  Zaparoo with Batocera on Raspberry Pi 5 demo

- **[Zaparoo Pt. 2 - Build in MISTER NFC reader + NFC cards](https://www.youtube.com/watch?v=mCrdyhnv24g)** - *Pixel Cherry Ninja* (July 27, 2025)
  PCB design and build tutorial

- **[TapTo NFC and MiSTer FPGA! Have a Physical Retro Game Collection](https://www.youtube.com/watch?v=rk-qAij-uM8)** - *Video Game Esoterica* (October 3, 2024)
  Overview of physical media aspect

- **[Wireless NFC Launching for MiSTER | ZAPAROO!](https://www.youtube.com/watch?v=W_m8dzvHQdM)** - *Pixel Cherry Ninja* (January 26, 2025)
  Wireless NFC functionality demo

- **[Unbelievably cool! Make you own working gamecarts!](https://www.youtube.com/watch?v=63EH1tI0HWk)** - *Pixel Cherry Ninja* (April 6, 2025)
  DIY game cartridge creation

- **[1,001 games to play instantly on MiSTer FPGA with TapTo/Zaparoo](https://www.youtube.com/watch?v=jSHnx0W8qR4)** - *Video Game Esoterica* (December 2, 2024)
  Showcase of 1001 games book integration

- **[You Can Have This Too | MiSTer FPGA | SMES + TapTo](https://www.youtube.com/watch?v=M220qOaxymY)** - *Retro Dodo Gaming* (September 15, 2024)
  SMES integration showcase

- **[GPC ARCADE LOTTERY - we play multiple games on the MiSTer](https://www.youtube.com/watch?v=Sxu6ydrxcio)** - *Gentlemen's Pixel Club* (December 22, 2024)
  Arcade lottery using Zaparoo

- **[MiSTer NFC cards experiment!](https://www.youtube.com/watch?v=jsficcAmyMI)** - *Gentlemen's Pixel Club* (November 20, 2023)
  Early NFC card experiments

- **[My Zaparoo Problem!](https://www.youtube.com/watch?v=axvgDzqV5UU)** - *Pezz82* (March 2025)
  Personal experience and troubleshooting with Zaparoo

- **[Zaparoo with MiSTercade and SNK Candy 25](https://www.youtube.com/watch?v=01nVvWWgOyg)** - *Oisin McG* (June 2025)
  Arcade cabinet integration with MiSTercade

- **[MiSTer FPGA and Zaparoo for NFC](https://www.youtube.com/watch?v=hPx3euYoK_Q)** - *Mister JBAM* (November 2025)
  French language Zaparoo tutorial

- **[Give Your PC Gaming A Physical Feel With NFC Cards And Zaparoo!](https://www.youtube.com/watch?v=oxfJf-r5K60)** - *Archades Games* (November 19, 2025)
  Tutorial on using Zaparoo with Windows and Steam games

- **[MiSTer Multisystem² & Zaparoo](https://www.youtube.com/watch?v=UnmkAn7KUR4)** - *Pixel Cherry Ninja* (December 2025)
  Multisystem 2 with Zaparoo integration demo

- **[The MiSTer Multisystem 2 plus Zaparoo is a retro gamers dream](https://www.youtube.com/watch?v=D7M2uFchdSg)** - *Scott Hanselman* (January 2, 2026)
  Enthusiastic walkthrough of Multisystem 2 and Zaparoo setup

- **[Zaparoo徹底解説 - Super Station One](https://www.youtube.com/watch?v=36mkcwrvqxQ)** - *ゆっくりレトロ図書館* (February 28, 2026)
  Japanese language Zaparoo tutorial for Super Station One and MiSTer

- **[Revendo o projeto Zaparoo + Teste dos itens do Unboxing anterior](https://www.youtube.com/watch?v=8zjln0Ffmv8)** - *YouTube* (March 16, 2026)
  Portuguese language Zaparoo project revisit and hardware unboxing follow-up

- **[Zaparoo agora no Batocera](https://www.youtube.com/watch?v=Pfb8CWQFVhg)** - *YouTube* (March 20, 2026)
  Portuguese language walkthrough of Zaparoo running on Batocera

- **[Il FUTURO del gaming è FISICO | Scopri Zaparoo giochi fisici FAI DA TE!](https://www.youtube.com/watch?v=HyhR_riEaOw)** - *AVK Studio* (April 18, 2026)
  Italian language introduction to Zaparoo and making physical NFC game cards

- **[Zaparooの作り方・使い方ガイド！ 自作のNFCカードをかざしてゲームが起動可能。アミーボもどきも作れちゃう!?【MiSTer FPGA・SuperStation One用】](https://www.youtube.com/watch?v=pTwi96VbCoQ)** - *レトロゲームで遊ぼう！* (May 1, 2026)
  Japanese language setup guide covering card writing, phone scanning, and printed labels

- **[New Zaparoo Mister Front End! Fresh coast of paint of your Mister screen!](https://www.youtube.com/watch?v=-RQubRqBVyc)** - *Pixel to Polygon Gaming* (May 4, 2026)
  Hands-on look at the initial Zaparoo Frontend beta for MiSTer

- **[MiSTer FPGA : ZAPAROO LAUNCHER](https://www.youtube.com/watch?v=MDgKR6qRXEw)** - *Nico Klem* (May 4, 2026)
  French language installation guide and demo for the initial Frontend release

- **[La magia dei giochi fisici su Batocera! Scopriamo Zaparoo](https://www.youtube.com/watch?v=aZPFoFqYJuc)** - *80 voglia di arcade* (May 26, 2026)
  Italian language Batocera walkthrough showing NFC cards, arcade cabinet setup, and Zaparoo Designer

- **[Zaparoo Frontend | Is It For You? | Let's Check It Out | MiSTer FPGA](https://www.youtube.com/watch?v=4tsXWUWIQw0)** - *Pixel Cherry Ninja* (July 6, 2026)
  Full Frontend tour covering artwork browsing, CRT and TATE modes, favorites, and the built-in updater

### News & Updates

- **[MiSTer, Analogue Pocket, FPGA, Random & Retro Gaming News (ep129)](https://www.youtube.com/watch?v=ZNOjMzGHwHY)** - *Pixel Cherry Ninja* (December 14, 2024)
  News roundup including Zaparoo coverage

- **[FPGA & Retro Gaming News Ep172](https://www.youtube.com/watch?v=3Lo-bGugn6k)** - *Metal Game Solid* (November 8, 2025)
  FPGA news including Zaparoo updates

- **[Retro 168 #3 | RGB Pi2, Zaparoo, M64, PS1 MC, MiSTer NES & More](https://www.youtube.com/watch?v=ep5t8ScWLiI)** - *Metal Game Solid* (October 24, 2025)
  Weekly retro gaming news

- **[FPGA & Retro Gaming News Ep176](https://www.youtube.com/watch?v=e2OiJZnFpRY)** - *Metal Game Solid* (December 11, 2025)
  FPGA news including Zaparoo coverage

- **[Retro 168 #5 | Zaparoo, DSPico, iiSU, NES Core, Romhacks](https://www.youtube.com/watch?v=J4ZkqYUv2lg)** - *Metal Game Solid* (December 5, 2025)
  Weekly news roundup leading with Zaparoo coverage

- **[New Frontend for MiSTer FPGA in the Works... and it Looks Awesome!](https://www.youtube.com/watch?v=5896iuzbrck)** - *Pixel Cherry Ninja* (December 19, 2025)
  First-look video on the upcoming Zaparoo graphical front-end

- **[Zaparoo Frontend Announced for MiSTer FPGA | Next-Level UI](https://www.youtube.com/watch?v=q-kboBTl23A)** - *Pixel Cherry Ninja* (May 3, 2026)
  Preview of the initial Zaparoo Frontend release and its artwork-based library browser

## Official Resources

- **[Zaparoo YouTube Channel](https://www.youtube.com/@HeyZaparoo)** - Official project channel with tutorials and updates
- **[Zaparoo Blog](/blog)** - Official project blog with announcements and technical articles
